# vxm86

./: .gitignore  CMakeLists.txt  README.md
elf/: elf_test  elf_test.asm
src/: CPU.cpp  CPU.hpp  ELFLoader.hpp  Instructions.cpp  Memory.hpp  Registers.hpp  main.cpp
